2008-02-12  Stefan Monnier  <monnier@iro.umontreal.ca>

	* simple.el (clone-indirect-buffer-hook): New hook.
	(clone-indirect-buffer): Run it.

2008-02-11  Daiki Ueno  <ueno@unixuser.org>

	* epa.el (epa-menu-mode): Merge into epa-mode.
	(epa-menu-items): Rename the label "EasyPG Assistant" to
	"Encryption/Decryption".

	* epa-dired.el: Define a new minor-mode epa-dired-mode for dired.
	(epa-dired-mode-map): Rename from epa-dired-map.
	(epa-global-dired-mode): Rename the global minor mode.

2008-02-11 Drew Adams  <drew.adams@oracle.com>

	* isearch.el (isearch-fail): New face.
	(isearch-message): Highlight failure part of input.

2008-02-11  Stefan Monnier  <monnier@iro.umontreal.ca>

	* ibuffer.el (ibuffer-header-line-format): New var.
	(ibuffer-mode): Set it instead of header-line-format.
	(ibuffer-update): Use it to set header-line-format.

	* international/mule-cmds.el (ucs-insert): Inherit surrounding
	properties like self-insert-command.

2008-02-11  Drew Adams  <drew.adams@oracle.com>

	* progmodes/etags.el: Add many doc strings.

2008-02-11  Jason Rumney  <jasonr@gnu.org>

	* ldefs-boot.el: Regenerated.

2008-02-11  Glenn Morris  <rgm@gnu.org>

	* progmodes/compile.el (compilation-error-regexp-alist-alist):
	Shorten some names.

	* ffap.el (ffap-rfc-directories): Add :version.

2008-02-11  Chris Moore  <christopher.ian.moore@gmail.com>

	* jka-cmpr-hook.el (jka-compr-compression-info-list): Handle .sifz
	files, and backup files of same.

2008-02-11  Kevin Ryde  <user42@zip.com.au>

	* ffap.el (ffap-rfc-directories): New variable.
	(ffap-rfc): Look in those dirs before offering ffap-rfc-path.

	* info.el (Info-next-reference, Info-prev-reference)
	(Info-try-follow-nearest-node): Move to and follow https:// links too.

	* simple.el (completion-list-mode): Show full completion-list-mode-map
	in the docstring.

2008-02-11  Sam Steingold  <sds@gnu.org>

	* vc-hooks.el (vc-prefix-key): Remove (undo 2008-02-06 patch).

2008-02-11  Glenn Morris  <rgm@gnu.org>
