@@ -1,5 +1,11 @@
 2008-02-12  Stefan Monnier  <monnier@iro.umontreal.ca>
 
+	* doc-view.el (doc-view-display): Change file arg to buffer arg, so it
+	works also for buffers w/o buffer-file-name.  Update callers.
+	(doc-view-clone-buffer-hook): New fun.
+	(doc-view-mode): Use it for indirect clones.
+	Mark the overlays with the `doc-view' property so they can be recognized.
+
 	* simple.el (clone-indirect-buffer-hook): New hook.
 	(clone-indirect-buffer): Run it.
 
